# opentermix

./: .gitignore  CMakeLists.txt  README.md  README.ru.md
debian/: changelog  control  copyright  install  opentermix.desktop  shlibs.local
resources/: resources.qrc
resources/styles/: dark.qss  light.qss
scripts/: build-deb.sh
src/: main.cpp
src/app/: Icons.cpp  Icons.h  MainWindow.cpp  MainWindow.h  SettingsWidget.cpp  SettingsWidget.h
src/sessions/: Session.h  SessionEditorDialog.cpp  SessionEditorDialog.h  SessionLayout.cpp  SessionLayout.h  SessionPanel.cpp  SessionPanel.h  SessionTreeModel.cpp  SessionTreeModel.h  SshArgs.cpp  SshArgs.h  SshConfigParser.cpp  SshConfigParser.h  Tunnel.h  TunnelDialog.cpp  TunnelDialog.h  TunnelManager.cpp  TunnelManager.h  TunnelsTabWidget.cpp  TunnelsTabWidget.h
src/sftp/: SftpBrowserWidget.cpp  SftpBrowserWidget.h  SftpClient.cpp  SftpClient.h
src/terminal/: ColorSchemeEditorDialog.cpp  ColorSchemeEditorDialog.h  ColorSchemeStore.cpp  ColorSchemeStore.h  MultiExec.cpp  MultiExec.h  TerminalArea.cpp  TerminalArea.h  TerminalGroup.cpp  TerminalGroup.h  TerminalWidget.cpp  TerminalWidget.h
translations/: opentermix_ru.ts
